--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.codef</groupId>
+	<groupId>io.codef.api</groupId>
 	<artifactId>easycodef-java</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>easycodef</name>
@@ -33,10 +33,14 @@
 	</scm>
 
 	<distributionManagement>
-		<repository>
-			<id>easycodef-java</id>
-			<url>https://api.bintray.com/maven/codef-io-dev/easycodef/easycodef-java/;publish=1</url>
-		</repository>
+		<snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
 	</distributionManagement>
 
 	<issueManagement>
